--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ header nav ul li a {
 
 .bottom-section .content-wrapper {
 	border-top: 5px solid #EEE;
-	border-bottom: 5px solid #EEE;
+	border-bottom: 5px solid #EEE; 
 }
 
 .section-one,
@@ -127,12 +127,12 @@ header nav ul li a {
 
 .section-two {
 	width: 100%;
-	border-top: 5px solid #EEE;
+	/* border-top: 5px solid #EEE; */
 }
 
 .section-three {
 	width: 100%;
-	border-top: 5px solid #EEE;
+	/* border-top: 5px solid #EEE; */
 }
 
 .bottom-section h3 {
@@ -165,3 +165,104 @@ footer span {
 	color: #45610E;
 	font-size: .88em;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+	/* mobile styling for the border */
+	.section-two, .section-three {
+		border-top: 5px solid #EEE;
+	}
+}
+
+
+
+@media all and (min-width: 768px) {
+	/* tablet styles here */
+	.bottom-section .content-wrapper {
+		border-top: 5px solid #EEE;
+		border-bottom: 5px solid #EEE;
+		justify-content: space-evenly;
+	}
+	
+	.section-one,
+	.section-two,
+	.section-three {
+		box-sizing: border-box;
+		padding: 0 40px;
+	}
+	
+	.section-one {
+		width: 30%;
+	}
+	
+	.section-two {
+		width: 30%;
+		border-left: 5px solid #EEE;
+	}
+	
+	.section-three {
+		width: 30%;
+		border-left: 5px solid #EEE;
+	}
+	
+	
+}
+
+@media all and (min-width: 1200px) {
+	/*desktop styles here */
+	body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 10px 0;
+	}
+	
+	
+	header h1 {
+		width: 30%;
+		padding: ;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 21%;
+	}
+
+	header nav ul {
+		display: flex;
+		list-style: none;
+		justify-content: space-between;
+	}
+
+	.bottom-section .content-wrapper {
+		border-top: 5px solid #EEE;
+		border-bottom: 5px solid #EEE;
+		justify-content: space-evenly;
+	}
+	
+	.section-one,
+	.section-two,
+	.section-three {
+		box-sizing: border-box;
+		padding: 0 40px;
+	}
+	
+	.section-one {
+		width: 30%;
+	}
+	
+	.section-two {
+		width: 30%;
+		border-left: 5px solid #EEE;
+	}
+	
+	.section-three {
+		width: 30%;
+		border-left: 5px solid #EEE;
+	}
+	
+}
+
